# beoremote-halo

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
beoremote_halo/: halo_raw.py  light.py  ws.py
beoremote_hass_bridge/: __main__.py  common.py  main.py
beoremote_hass_bridge/beoremote_halo/: __init__.py  buttons.py  halo_raw.py  ws.py
beoremote_hass_bridge/hass/: __init__.py  cursed_client.py  ws.py
hass/: cursed_client.py  ws.py
src/beoremote_halo/: light.py
tests/: ha_tests.py  run_it.py
