[tool.poetry]
name = "beoremote-hass-bridge"
version = "0.1.0"
description = ""
authors = ["Fox Huston <448633+foxhuston@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "beoremote_hass_bridge"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
jsons = "^1.6.3"
python-dotenv = "^1.0.0"
zeroconf = "^0.69.0"
coloredlogs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
